--- a/public/stylesheets/home-light.css
+++ b/public/stylesheets/home-light.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -8,7 +8,7 @@ a {
 }
 
 .input_area {
-  margin: 10rem auto;
+  margin: 20rem auto;
   text-align: center;
 }
 .input_area > button {
@@ -33,4 +33,60 @@ a {
   font-size:120%;
   line-height: 1.5rem;
   margin-right: 1rem;
+}
+
+/* Style the tab */
+.tab {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+ul.tab li {
+  float: left;
+}
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+iframe {
+  width: 100%;
+  height: 50rem;
+}
+.info h1{
+  position: absolute;
+  left: 5rem;
+  top: 1rem;
+}
+.info p{
+  position: absolute;
+  left: 5rem;
+  top: 4rem;
 }
