--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,12 +1,14 @@
-* {
-  outline: none;
+body {
+  padding: 0;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-html,body {
-  margin: 0 auto;
-  padding: 0 auto;
+
+a {
+  color: #00B7FF;
 }
+
 .input_area {
-  margin: 1rem;
+  margin: 20rem auto;
   text-align: center;
 }
 .input_area > button {
@@ -32,43 +34,59 @@ html,body {
   line-height: 1.5rem;
   margin-right: 1rem;
 }
-#result {
-  margin-top: 1rem;
-  padding-top: 1rem;
-  width:auto;
-  display:flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
+
+/* Style the tab */
+.tab {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
 }
-#result > div {
-  overflow: scroll;
-  border:2px solid black;
-  border-radius: 0.4rem;
-  width: 40%;
-  margin: 1rem;
-  height: 30rem;
+ul.tab li {
+  float: left;
 }
-#libgen {
-  order:1;
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
 }
-#zlib {
-  order:2;
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
 }
-#archive {
-  order:3;
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
 }
-#worldcat {
-  order:4;
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
-#hathi {
-  order:5;
+
+iframe {
+  width: 100%;
+  height: 50rem;
 }
-#google {
-  order:6;
+.info h1{
+  position: absolute;
+  left: 5rem;
+  top: 1rem;
 }
-.title{
-  width: 6rem;
-  text-align: center;
-  background-color: thistle;
+.info p{
+  position: absolute;
+  left: 5rem;
+  top: 4rem;
 }
