--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <body>
     <div class="info">
       <h1><%= title %></h1>
-      <p>Welcome to <%= title %></p>
+      <p>有啊有啊都有啊</p>
     </div>
     <div id="app">
         <div class="input_area">
