更新js、css版本号

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel='icon' href='/images/favicon.ico' type='image/x-icon'/ >
     <link rel="shortcut icon" href="/public/images/favicon.ico">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/home.css?=1.0' />
+    <link rel='stylesheet' href='/stylesheets/home.css?=20210329' />
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   </head>
   <body>
@@ -36,6 +36,6 @@
 
       </div>
     </div>
-    <script charset="utf-8" src="/javascripts/home.js?=2.0"></script>
+    <script charset="utf-8" src="/javascripts/home.js?=20210329"></script>
   </body>
 </html>
